--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,5 +5,9 @@ steps:
   - run
   - deploy
   - $_SERVICE_NAME
+  - --image
+  - gcr.io/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA
+image:
+  - gcr.io/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA
 options:
   logging: CLOUD_LOGGING_ONLY
