--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,7 +7,7 @@ steps:
   - $_SERVICE_NAME
   - --image
   - gcr.io/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA
-image:
+images:
   - gcr.io/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA
 options:
   logging: CLOUD_LOGGING_ONLY
