--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,6 +7,8 @@ steps:
   - $_SERVICE_NAME
   - --image
   - gcr.io/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA
+  - --region
+  - asia-northeast1
 images:
   - gcr.io/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA
 options:
