--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,5 +11,6 @@ steps:
   - --gen2
   - --runtime=python312
   - --source=.
+  - --vpc-connector=test-connect
 options:
   logging: CLOUD_LOGGING_ONLY
